// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStyle returns style for "desktop" 1`] = `
{
  "@media (min-width: 1000px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "down" 1`] = `
{
  "down": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "lg" 1`] = `
{
  "@media (min-width: 1000px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "maxWidth" 1`] = `
{
  "maxWidth": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "md" 1`] = `
{
  "@media (min-width: 768px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "minWidth" 1`] = `
{
  "minWidth": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "mobile" 1`] = `
{
  "@media (min-width: 0px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "sm" 1`] = `
{
  "@media (min-width: 550px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "tablet" 1`] = `
{
  "@media (min-width: 768px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "up" 1`] = `
{
  "up": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "xl" 1`] = `
{
  "@media (min-width: 1200px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "xs" 1`] = `
{
  "@media (min-width: 375px)": {
    "color": "blue",
  },
}
`;

exports[`getStyle returns style for "xxl" 1`] = `
{
  "@media (min-width: 1440px)": {
    "color": "blue",
  },
}
`;
